fix: social nav not showing in prod

--- a/src/styles/partials/nav.sass
+++ b/src/styles/partials/nav.sass
@@ -112,7 +112,7 @@
                 li 
                     margin: 0.5em
 
-    @media screen and (min-width: $widescreen) and (min-height: $tabletL)
+    @media screen and (min-width: $widescreen) and (min-height: $heightSocialNav)
         &.page
             display: grid
             grid-row: 2
